fix: widget messing parent page layout & flickering

--- a/src/iframe.scss
+++ b/src/iframe.scss
@@ -25,4 +25,8 @@
       left: 0;
     }
   }
+
+  &--hidden {
+    display: none;
+  }
 }
